[package]
name = "shaq"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
version = "1.0.1"
description = "SPSC FIFO queue backed by shared memory for IPC"
readme = "README.md"
homepage = "https://anza.xyz/"
repository = "https://github.com/anza-xyz/shaq"
license = "Apache-2.0"
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]

[target."cfg(unix)".dependencies]
libc = { version = "0.2.174" }

[dev-dependencies]
core_affinity = "0.8.3"
ctrlc = "3.4.6"
