[package]
name = "shaq"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
version = "3.0.0"
description = "Shared-memory SPSC, MPMC, and broadcast queues for IPC"
readme = "README.md"
homepage = "https://anza.xyz/"
repository = "https://github.com/anza-xyz/shaq"
license = "Apache-2.0"
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.180" }

[dev-dependencies]
core_affinity = "0.8.3"
ctrlc = "3.5.1"
